--- a/playground.ipynb
+++ b/playground.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,8 +250,8 @@
    "source": [
     "# challenge 3\n",
     "# modifikasi value x dan y\n",
-    "x = 100\n",
-    "y = 141\n",
+    "x = 101\n",
+    "y = 140\n",
     "print(f\"x + y = {x + y}\") # x + y should be 241"
    ]
   },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,21 +395,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['John', 25, True, 'orange', 3.14, 'apple']\n"
+      "['John', 25, 'orange', True, 3.14, 'apple']\n"
      ]
     }
    ],
    "source": [
     "# challenge 5\n",
     "ls = [\"John\", 25, True, 3.14, \"apple\"]\n",
-    "ls.insert(3, \"orange\")\n",
+    "ls.insert(2, \"orange\")\n",
     "print(ls) # Output: ['John', 25, 'orange', True, 3.14, 'apple']"
    ]
   },
